PLAY/style.css
body {
    font-family: Arial;
    font-size: 10pt;
}
body.light-mode {
    background-color: #fff;
    color: #000;
}
body.dark-mode {
    background-color: #252525;
    color: #fff;
}

body.dark-mode input {
    background-color: #bbb;
}

h1 {
    color:#b404ae; 
    font-size: 4em;
}
h2 {
    font-weight: bold;
}
.rules {
    font-size: 12pt;
}
.version {
    font-size: 1em;
}
.credits {
    font-size: 1em;
    color: #bfac00;
    font-weight: bold;
}

.result-wrong-answers, .result-correct-answers {
    font-size: 1.8em;
    margin-top: 20px;
    font-weight: bold;
}
.result-correct-answers {
    color:#01df01;
}
.result-wrong-answers {
    color: #f00;
}

input.answer {
    width: 300px;
    height: 40px;
    margin-left: 10px;
}
.correct-answer {
    background-color: #8ce598;
}
.wrong-answer {
    background-color: #f4a19a;
}

button.clue-button {
    background-color: #f8ff9a;
    color: #000;
    border: 1mm ridge #0040ff;
    padding: 5px 10px;
    cursor: pointer;
    margin-left: 10px;
}

.change-amount-button {
    background-color: #3498db;
    color: #fff;
    border: 0.5mm ridge #000;
    padding: 10px 20px;
    cursor: pointer;
    font-size: 16px;
    border-radius: 5px;
    margin: 10px;
}

button.check-answers {
    background-color: #00ff37;
    color: #000;
    border: 0.5mm ridge #000;
    padding: 15px 20px;
    cursor: pointer;
    font-size: 16px;
    border-radius: 5px;
    margin: 10px;
}

button.fill-wrong-answers {
    background-color: #eaff00;
    color: #000;
    border: 0.5mm ridge #000;
    padding: 15px 20px;
    cursor: pointer;
    font-size: 16px;
    border-radius: 5px;
    margin: 10px;
}

